# BlockJump

./: .bazelrc  .gitignore  BUILD.bazel  BlockJump.bazelproject  README.md  WORKSPACE  appveyor.yml  main.cpp
.clion_targets/: game_linux_debug_build.xml  game_linux_debug_run.xml  game_linux_release_build.xml  game_linux_release_run.xml  game_windows_debug_build.xml  game_windows_debug_run.xml  game_windows_release_build.xml  game_windows_release_run.xml  imgui_demo_linux_debug_run.xml  imgui_demo_windows_debug_run.xml  linux_debug_build.xml  linux_debug_run.xml  linux_release_build.xml  linux_release_run.xml  map_editor_linux_debug_build.xml  map_editor_linux_debug_run.xml  map_editor_linux_release_build.xml  map_editor_linux_release_run.xml  map_editor_windows_debug_build.xml  map_editor_windows_debug_run.xml  map_editor_windows_release_build.xml  map_editor_windows_release_run.xml  windows_debug_build.xml  windows_debug_run.xml  windows_release_build.xml  windows_release_run.xml
.github/workflows/: ci.yml  ubuntu_ci.yml  ubuntu_game.yml  ubuntu_server.yml  windows_ci.yml  windows_game.yml  windows_server.yml
Assets/: BUILD.bazel
Assets/Maps/: multi_player_test.map  single_player_test.map  test.map  test_map.map
Assets/src/: assets_manager.cpp  assets_manager.h
Entities/: BUILD.bazel
Entities/src/: entity.cpp  entity.h  player_entity.cpp  player_entity.h  utility.h
Game/: BUILD.bazel  constants.h  game.cpp  game.h  main.cpp
Game/Assets/: BUILD.bazel
Game/Core/: BUILD.bazel
Game/Core/src/: game.cpp  game.h  game_events.cpp  game_events.h  game_window.cpp  game_window.h  metadata.h  utility.h  window.cpp  window.h
Game/Entities/: BUILD.bazel
Game/Entities/src/: base_entity.cpp  base_entity.h  components.h  entity.cpp  entity.h  entity_manager.cpp  entity_manager.h  player_entity.cpp  player_entity.h  utility.h
Game/GUI/: BUILD.bazel
Game/GUI/src/: button.cpp  button.h  gui_constans.h  main_menu.cpp  main_menu.h  not_implemented_screen.cpp  not_implemented_screen.h  online_game_screen.cpp  online_game_screen.h
Game/Network/: BUILD.bazel
Game/Network/src/: client.cpp  client.h
Game/Runner/: BUILD.bazel
Game/Runner/src/: game.cpp  game.h  window.cpp  window.h
Game/World/: BUILD.bazel
Game/World/src/: background_object.h  block.cpp  block.h  utility.h
Game/src/: game.cpp  game.h  utility.h
Game/test/: game_test.cpp
MapEditor/: bootstrap.cpp  main.cpp  utility.h
MapEditor/Core/: BUILD.bazel
MapEditor/Core/src/: bootstrap.cpp  bootstrap.h  configuration.h  map_editor_events.cpp  map_editor_events.h  map_editor_window.cpp  map_editor_window.h
MapEditor/GUI/: BUILD.bazel
MapEditor/GUI/src/: button.h  dialog_with_path.cpp  dialog_with_path.h  menu_bar.cpp  menu_bar.h  side_panel.cpp  side_panel.h
MapEditor/Map/: BUILD.bazel
MapEditor/Map/messages/: Map.proto  Properties.proto
MapEditor/Map/src/: grid.cpp  grid.h  map_serialization.cpp  map_serialization.h  tiles.cpp  tiles.h  tiles_service.cpp  tiles_service.h
Messages/: grpc_server.proto
ProtoMessages/: BUILD.bazel
ProtoMessages/google/protobuf/: api.proto  type.proto
ProtoMessages/google/protobuf/compiler/: plugin.proto
ProtoMessages/map/: Map.proto  map.proto  properties.proto
ProtoMessages/server/: grpc_server.proto  service_messages.proto  stream.proto  world_snapshot.proto
Server/: game_server.go  go.mod  go.sum  main.go
Server/.fleet/: run.json
Server/core/: logger.go
Server/messages/: connect.proto
Server/proto/: README  connect.pb.go  connect.proto  game_server.go  grpc_server.pb.go  grpc_server.proto  grpc_server_grpc.pb.go  stream.pb.go  stream.proto
Server/web/: handlers.go
Tools/protoc/: README
World/: BUILD.bazel
World/src/: ground.cpp  ground.h
