load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@rules_proto_grpc//cpp:defs.bzl", "cpp_grpc_library")

# Game rules

cc_binary(
    name = "main",
    srcs = ["Game/main.cpp"],
    data = ["//Assets:copy_fonts"],
    deps = [
        "//:game",
        "@curlcpplib//:curlcpp",
        "@spdloglib//:spdlog",
        # TODO: Error while generating gRPC code - deprecated C++ 20 feature is generated!
        # "//:server"
    ],
)

cc_library(
    name = "game",
    srcs = ["Game/game.cpp"],
    hdrs = ["Game/game.h"],
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:user32.lib"],
        "@platforms//os:linux": [
            "-pthread",
            "-lX11",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//Game/Entities:entities",
        "//Game/GUI:gui",
        "//Game/World:world",
        "@spdloglib//:spdlog",
    ],
)

cc_library(
    name = "game-bootstrap",
    srcs = ["Game/constants.h"],
    visibility = ["//visibility:public"],
)

#cpp_grpc_library(
#    name = "server",
#    protos = ["//ProtoMessages:server-messages"],
#)

# Map editor rules

cc_binary(
    name = "map-editor",
    srcs = ["MapEditor/main.cpp"],
    deps = [
        "//MapEditor/Core:core",
        "//MapEditor/GUI:gui",
        "//MapEditor/Map:map",
        "@imguilib//:imgui",
        "@spdloglib//:spdlog",
    ],
)
