load("@bazel_skylib//rules:copy_directory.bzl", "copy_directory")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "sprites",
    srcs = glob([
        "Sprites/*.png",
    ]),
)

copy_directory(
    name = "copy_sprites",
    src = "Sprites",
    out = "Sprites",
)

filegroup(
    name = "fonts",
    srcs = glob([
        "Fonts/*.otf",
        "Fonts/*.ttf",
    ]),
)

copy_directory(
    name = "copy_fonts",
    src = "Fonts",
    out = "Fonts",
)

filegroup(
    name = "sounds",
    srcs = glob([
        "Sounds/*.wav",
    ]),
)

copy_directory(
    name = "copy_sounds",
    src = "Sounds",
    out = "Sounds",
)

filegroup(
    name = "maps",
    srcs = glob([
        "Maps/*.map",
    ]),
)

copy_directory(
    name = "copy_maps",
    src = "Maps",
    out = "Maps",
)
