load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "game",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    linkopts =
        [
            "-lsfml-graphics",
            "-lsfml-window",
            "-lsfml-system",
            "-pthread",
        ],
    visibility = ["//visibility:public"],
    deps = [
        "//Entities:entities",
        "//World:world",
    ],
)

cc_test(
    name = "game_test",
    srcs = ["test/game_test.cpp"],
    deps = [
        ":game",
        "@googletestlib//:gtest",
    ],
)
