load("@rules_proto//proto:defs.bzl", "proto_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "server-messages",
    srcs = glob(["server/*.proto"]),
)

proto_library(
    name = "map-serialization-messages",
    srcs = glob(["map/*.proto"]),
)

cc_proto_library(
    name = "map-serialization",
    deps = [":map-serialization-messages"],
)
