load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "world",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    linkopts =
        [
            "-lsfml-graphics",
            "-lsfml-window",
            "-lsfml-system",
        ],
    visibility = ["//visibility:public"],
)
