load("@rules_cc//cc:defs.bzl", "cc_library")

config_setting(
    name = "windows",
    constraint_values = ["@platforms//os:windows"],
)

cc_library(
    name = "game",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    data = ["//Assets:sprites"],
    linkopts = select({
        "@platforms//os:windows": ["-DEFAULTLIB:user32.lib"],
        "@platforms//os:linux": [
            "-pthread",
            "-lX11",
        ],
    }),
    visibility = ["//visibility:public"],
    deps = [
        "//:game-bootstrap",
        "//Game/Entities:entities",
        "//Game/World:world",
        "//Library:library_common",
        "@gllib//:glew",
        "@gllib//:glfw",
        "@sfmllib//:sfml-graphics",
        "@sfmllib//:sfml-system",
        "@sfmllib//:sfml-window",
        "@spdloglib//:spdlog",
    ],
)
