load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "entities",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    visibility = ["//visibility:public"],
    deps =
        [
            "//:game-bootstrap",
            "@sfmllib//:sfml-graphics",
            "@sfmllib//:sfml-system",
            "@sfmllib//:sfml-window",
            "@spdloglib//:spdlog",
        ],
)
