load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gui",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//Game/Core:core",
        "//Library:library_common",
        "@sfmllib//:sfml-graphics",
        "@sfmllib//:sfml-system",
        "@sfmllib//:sfml-window",
        "@spdloglib//:spdlog",
        "@stduuidlib//:stduuid",
    ],
)
