load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gui",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    data = ["//Assets:sprites"],
    visibility = ["//visibility:public"],
    deps = [
        "//:map-editor-bootstrap",
        "//Assets:assets",
        "//MapEditor/Core:core",
        "@imguilib//:imgui",
        "@spdloglib//:spdlog",
    ],
)
