load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "gui",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    data = ["//Assets:sprites"],
    visibility = ["//visibility:public"],
    deps = [
        "//Assets:assets",
        "//MapEditor/Core:core",
        "//MapEditor/Map:map",
        "@imguilib//:imgui",
        "@spdloglib//:spdlog",
    ],
)
