load("@rules_cc//cc:defs.bzl", "cc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

cc_library(
    name = "map",
    srcs = glob(["src/*.cpp"]),
    hdrs = glob(["src/*.h"]),
    linkopts = ["-lstdc++fs"],
    visibility = ["//visibility:public"],
    deps = [
        "//MapEditor/Core:core",
        "//ProtoMessages:map-serialization",
        "@sfmllib//:sfml-graphics",
        "@sfmllib//:sfml-system",
        "@sfmllib//:sfml-window",
        "@spdloglib//:spdlog",
    ],
)
